# flashly

./: README.md
backend/: .env  .gitignore  README.md  config.py  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py
backend/app/controllers/: auth_controllers.py  flashcard_controllers.py  oauth_controllers.py  studyset_controllers.py
backend/app/models/: __init__.py  flashcard_model.py  studyset_model.py  user_model.py
backend/app/routes/: __init__.py  auth_route.py  auth_routes.py  oauth_routes.py  studyset_routes.py
backend/migrations/versions/: 22ef8aae3aa8_make_password_hash_nullable_for_oauth_.py  7a2ae74c0c63_initial_migration.py  8d30e311de91_add_studysets_and_flashcards_tables.py  9989a8e6d158_add_oauth_fields_to_user_model.py
backend/utils/: flashly_bot.py
frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/components/: Navbar.jsx
frontend/src/: App.jsx  index.css
frontend/src/components/: CTA.jsx  Card.jsx  FAQ.jsx  Features.jsx  FileUpload.jsx  Flashcard.jsx  FlipCard.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  LoginForm.jsx  Navbar.jsx  RegisterForm.jsx  Testimonials.jsx
frontend/src/layouts/: HomeLayout.jsx  LandingLayout.jsx  MainLayout.jsx
frontend/src/pages/: AddFlashcardPage.jsx  AddStudySetPage.jsx  DashboardPage.jsx  EditFlashcardPage.jsx  EditStudySetPage.jsx  FlashcardPage.jsx  FlashcardsPage.jsx  GeneratePage.jsx  LandingPage.jsx  LoginPage.jsx  NotFoundPage.jsx  SignupPage.jsx  (+3 more)
frontend/utils/: FetchApi.jsx  ProtectedRoutes.jsx
(+5 files in other folders)
