[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-dance>=7.1.0",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.5",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "requests-oauthlib>=2.0.0",
    "sqlalchemy-utils>=0.41.2",
]
